完善代码，修改逻辑，增加示例

--- a/app/src/main/res/layout/layout_empty_changed.xml
+++ b/app/src/main/res/layout/layout_empty_changed.xml
@@ -7,10 +7,10 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="error"
-        android:textColor="@color/colorPrimary"
+        android:text="empty_changed"
         android:textSize="30dp"/>
 
 </LinearLayout>
