--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@android:color/white"
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_empty"
+        android:textColor="@android:color/holo_orange_dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="empty"
