--- a/app/src/main/res/layout/layout_no_net.xml
+++ b/app/src/main/res/layout/layout_no_net.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@android:color/white"
     android:orientation="vertical">
 
     <TextView
+        android:textColor="@android:color/holo_green_dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="no_net"
