修改示例代码，增加使用场景

--- a/app/src/main/res/layout/layout_error.xml
+++ b/app/src/main/res/layout/layout_error.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:text="error"
         android:textColor="@color/colorPrimary"
-        android:textSize="30dp"/>
+        android:textSize="30sp"/>
 
 </LinearLayout>
