--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.marno.easystatelibrary.EasyStatusView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/esvlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:esv_empty="@layout/layout_empty"
-    app:esv_loading="@layout/layout_loading"
-    tools:context="com.marno.easystateview.MainActivity">
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:text="Hello World!"/>
+    <Button
+        android:id="@+id/btn_mockdata"
+        android:layout_width="200dp"
+        android:layout_height="56dp"
+        android:onClick="onClick"
+        android:text="模拟网络"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:text="Hello World!"/>
+    <Button
+        android:id="@+id/btn_status_preview"
+        android:layout_width="200dp"
+        android:layout_height="56dp"
+        android:onClick="onClick"
+        android:text="状态查看"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView"/>
-
-</com.marno.easystatelibrary.EasyStatusView>
+</LinearLayout>
