--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -12,6 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="empty"
-        android:textSize="30dp"/>
+        android:textSize="30sp"/>
 
 </LinearLayout>
