--- a/app/src/main/res/layout/layout_empty_changed.xml
+++ b/app/src/main/res/layout/layout_empty_changed.xml
@@ -11,6 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="empty_changed"
-        android:textSize="30dp"/>
+        android:textSize="30sp"/>
 
 </LinearLayout>
