--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/tv_empty"
-        android:textColor="@android:color/holo_orange_dark"
+        android:textColor="@android:color/holo_orange_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="empty"
