--- a/app/src/main/res/layout/layout_no_net.xml
+++ b/app/src/main/res/layout/layout_no_net.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@android:color/holo_blue_dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="no_net"
